--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,25 +1,36 @@
-<!DOCTYPE <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>New Campground</title>
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
+<% layout('/layouts/boilerplate')%>
+<div class="row">
+    <h1 class="text-center">New Campground</h1>
+    <div class="col-6 offset-3">
+        <form action="/campgrounds" method="POST">
+            <div class="mb-3">
+                <label for="title" class="form-label">Title</label>
+                <input type="text" class="form-control" id="title" name="campground[title]">
+            </div>
+            <div class="mb-3">
+                <label for="location" class="form-label">Location</label>
+                <input type="text" class="form-control" id="location" name="campground[location]">
+            </div>
+            <div class="mb-3">
+                <label for="image" class="form-label">Image Url</label>
+                <input type="text" class="form-control" id="image" name="campground[image]">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="price">Campground Price</label>
+              <div class="input-group">
+                <span class="input-group-text" id="price-label">$</span>
+                <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="Username" aria-describedby="price-label" name="campground[price]">
+              </div>
+            </div>
 
-  <body>
-    <form action="/campgrounds" method="POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="campground[title]">
-        </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" id="location" name="campground[location]">
-        </div>
-        <button>Add Campground</button>
-    </form>
-    <a href="/campgrounds">Back To Campground</a>
-
-  </body>
-</html>
+            <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea type="text" class="form-control" id="description" name="campground[description]"></textarea>
+            </div>
+            <div class="mb-3">
+            <button class="btn btn-success">Add Campground</button>
+            </div>
+        </form>
+        <a href="/campgrounds">All Campgrounds</a>
+    </div>
+</div>
