--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
     <div class="row">
         <div class="col-6 offset-3">
-            <div class="card mb-3">
+            <div class="card">
                 <img src="<%= campground.image%>" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title"><%= campground.title%></h5>
