updated client-side form validations

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,20 +2,20 @@
     <div class="row">
         <h1 class="text-center">Edit Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds" method="POST">
+            <form action="/campgrounds" method="POST" novalidate class="validated-form" >
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
-                    <input type="text" class="form-control" id="title" name="campground[title]"
+                    <input type="text" class="form-control" id="title" name="campground[title]" required
                         value="<%=campground.title%>">
                 </div>
                 <div class="mb-3">
                     <label for="location" class="form-label">Location</label>
-                    <input type="text" class="form-control" id="location" name="campground[location]"
+                    <input type="text" class="form-control" id="location" name="campground[location]" required
                         value="<%=campground.location%>">
                 </div>
                 <div class="mb-3">
                     <label for="image" class="form-label">Image Url</label>
-                    <input type="text" class="form-control" id="image" name="campground[image]"
+                    <input type="text" class="form-control" id="image" name="campground[image]" required
                         value="<%=campground.image%>">
                 </div>
                 <div class="mb-3">
@@ -23,14 +23,14 @@
                     <div class="input-group">
                         <span class="input-group-text" id="price-label">$</span>
                         <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="Username"
-                            aria-describedby="price-label" name="campground[price]" value="<%=campground.price%>">
+                            aria-describedby="price-label" name="campground[price]" required value="<%=campground.price%>">
                     </div>
                 </div>
 
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <textarea type="text" class="form-control" id="description"
-                        name="campground[description]"><%=campground.description%></textarea>
+                        name="campground[description]" required><%=campground.description%></textarea>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-success">Update Campground</button>
