--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -13,6 +13,7 @@
 <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar')%>
     <main class="container mt-5">
+        <%- include('../partials/flash')%>
         <%- body %>
     </main>
     <%- include('../partials/footer')%>
@@ -43,6 +44,8 @@
         })
         })()
     </script>
+
+    <script src='/javascripts/validateForms.js'></script>
 </body>
 
 </html>
